# WeAreFriends

./: .gitignore  Makefile  README.md  audio_processor.py  compose.yml  main.py  media_processor.py  pyproject.toml  temp.html
backend/: Dockerfile  alembic.ini  friend_prompts.db  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: b65b56d58370_add_created_at_to_organization_and_.py
backend/app/: audio_processor.py  image_processor.py  main.py  test_gpt.py
backend/app/core/: config.py  logger.py  prompts.json  prompts.py
backend/app/db/: models.py  session.py
backend/app/managers/: connection_manager.py
backend/app/models/: animal.py  db.py  websocket.py
backend/app/routers/: health.py  identify.py  organization.py  websocket.py
backend/app/services/: audio_service.py  extend_prompt_service.py  get_extend_prompt_service.py  image_service.py  mock_animals.py  organization_service.py  tts_service.py
backend/app/utils/: base64_utils.py  file_utils.py
frontend/: .env.local  Dockerfile  package-lock.json  package.json  vercel.json
frontend/src/: App.tsx  config.ts  main.tsx  styles.css
frontend/src/components/: ARScene.jsx  ARScene.tsx  AnimalRecognition.jsx  AnimatedSpeechBubble.css  AnimatedSpeechBubble.tsx  ConversationPanel.css  ConversationPanel.tsx  IdentifyButton.css  IdentifyButton.tsx  MicButton.css  MicButton.tsx  ModelLoader.css  ModelLoader.tsx  ObjectTracking.tsx  ObjectTracking_legacy.tsx  ServerObjectTracking.tsx  SpeechBubble.jsx  SpeechBubble.tsx  TrackingController.tsx  TrackingModeSelector.tsx
frontend/src/contexts/: ConversationContext.tsx  ModelContext.tsx
frontend/src/data/: animalData.js  animalData.ts  objectNameMapping.ts
frontend/src/pages/: HomePage.tsx  manageScreen.tsx
(+10 files in other folders)
