[project]
name = "wearefriends"
version = "0.1.0"
description = ""
authors = [
    {name = "yudai-kdix",email = "yudai.homma222@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "openai (>=1.78.0,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "gtts (>=2.5.4,<3.0.0)",
    "ultralytics (>=8.3.134,<9.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "soundfile (>=0.13.1,<0.14.0)",
    "style-bert-vits2 (>=2.5.0,<3.0.0)",
    "sqlalchemy[asyncio] (>=2.0.41,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "aiosqlite (>=0.21.0,<0.22.0)"
]

[tool.poetry.dependencies]
python = ">=3.12"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false